--- a/assets/royalflare/royalflare.css
+++ b/assets/royalflare/royalflare.css
@@ -176,6 +176,8 @@ a.scene {
     .wrap {
         margin-left: 0%;
         margin-right: 0%;
+    }
+    #wrap {
         font-size: 12px;
     }
 }
@@ -183,6 +185,8 @@ a.scene {
     .wrap {
         margin-left: 5%;
         margin-right: 5%;
+    }
+    #wrap {
         font-size: 12px;
     }
 }
