--- a/assets/shared/dark.css
+++ b/assets/shared/dark.css
@@ -24,7 +24,7 @@ a:visited:not(.replay):not(.i):not(.dropdown_button) {
 }
 #checkboxes, #checkboxes td:not(.noborders), #gameTable, #gameTable th, #gameTable td, #table, #table th, #table td, .border,
 table:not(#jargontable):not(#bullettable):not(#spelltable):not(#searchtable):not(#countries):not(.noborders):not(.result):not(.center):not(.poll),
-table#contents, tr:not(.noborders), th:not(.noborders), td:not(.noborders) {
+table#contents, tr:not(.noborders), table:not(.poll) th:not(.noborders):not(.foot), table:not(.poll) td:not(.noborders):not(.foot) {
     border: 1px solid #808080;
 }
 .PoDDt th, .LLSt th, .EoSDt th, .PCBt th, .PoFVt th, .MoFt th, .GFWt th, .TDt th, .DDCt th, .tier th, .tier {
@@ -110,6 +110,9 @@ a:visited.dropdown_button {
 }
 #results_2020 td, #schedule_table td {
     border-top: 1px solid white;
+}
+.foot {
+    border-top: 3px solid #fff;
 }
 @media only screen and (max-width: 1100px) {
     #ack {
